fix: hide duplicate AuthBar buttons in mobile menu on tablet

--- a/components/layout/AuthBar/AuthBar.module.css
+++ b/components/layout/AuthBar/AuthBar.module.css
@@ -69,3 +69,9 @@
   max-width: 335px;
   height: 32px;
 }
+
+@media screen and (min-width: 768px) {
+  .mobile {
+    display: none;
+  }
+}
